--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "ajv": "^7.0.3",
+    "framer-motion": "^3.1.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
+    "swup": "^2.0.14",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
